# Rainfalland-crop-prediction

./: .gitignore  DEPLOY.md  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py  vercel.json
.streamlit/: config.toml
nawsp/: feature_importance_rainfall.py  rainfall_model.pkl  run.py  structure  train_crop_model.py  train_rainfall_model.py
nawsp/api/: database.py  main.py
nawsp/data/: rainfall_data.csv
nawsp/frontend/: New-Item index.html
nawsp/models/: crop_model.pkl  rainfall_model.pkl  rainfall_model.py
